<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/id_menu1"
        android:icon="@drawable/movies_folder_black"
        app:showAsAction="always"
        android:title="">
        <menu>
            <item android:title="@string/menu_popular"
                android:id="@+id/menu_popular"/>
            <item android:title="@string/menu_upcoming"
                android:id="@+id/menu_upcoming"/>
            <item android:title="@string/menu_latest"
                android:id="@+id/menu_latest"/>
            <item android:title="@string/menu_playing"
                android:id="@+id/menu_playing"/>
            <item android:title="@string/menu_top"
                android:id="@+id/menu_top"/>
        </menu>
    </item>
    <item android:id="@+id/id_menu2"
        android:icon="@drawable/video"
        app:showAsAction="always"
        android:title="">
        <menu>
            <item android:title="@string/menu_favorites"
                android:id="@+id/menu_favorites"/>
            <item android:title="@string/menu_watchlist"
                android:id="@+id/menu_watchlist"/>
        </menu>
    </item>

</menu>